[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/GameOver.gd" type="Script" id=1]

[node name="GameOver" type="Node2D"]
script = ExtResource( 1 )

[node name="GameOverLabel" type="Label" parent="."]
margin_left = 512.0
margin_top = 200.0
margin_right = 623.0
margin_bottom = 214.0
text = "Game Over Yeah!"

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 512.0
margin_top = 250.0
margin_right = 623.0
margin_bottom = 264.0
text = "Score: 0"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 512.0
margin_top = 300.0
margin_right = 595.0
margin_bottom = 344.0

[node name="RestartButton" type="Button" parent="VBoxContainer"]
margin_right = 138.0
margin_bottom = 20.0
text = "Retry?"

[node name="TitleButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 138.0
margin_bottom = 44.0
text = "Back to Title Screen"
